+ базовые стили переворота

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Игра карточек</title>
   </head>
   <body>
+    <div id="header"></div>
     <div id="cards-game"></div>
   </body>
 </html>
